facet-args/tests/snapshots/err__error_invalid_ip_address.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --address not-an-ip 
   ·           ────┬────
   ·               ╰── reflection error: Operation failed on shape IpAddr: Failed to parse string value
   ╰────
